Wed Dec  9 12:40:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added Local_Facet test

Wed Dec  9 12:37:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Local_Facet:
          Removed

        * tests/CIAO_ComponentServer/Local_Facet:
          New test for testing local facets

        * ciao/ComponentServer/CIAO_ComponentServer.idl
        * ciao/ComponentServer/CIAO_Container_Impl.cpp
        * ciao/ComponentServer/CIAO_Container_Impl.h
        * ciao/Containers/Container_Base.idl
        * ciao/Containers/Session/Session_Container.cpp
        * ciao/Containers/Session/Session_Container.h
          Added support to connect local facets by William Otte

        * ciao/Servants/Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
          Made several methods pure virtual instead of not implemented

Wed Dec  9 11:24:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
          Resolved compiler warnings.

Wed Dec  9 11:13:44 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added State_Connection_Test.

        * connectors/dds4ccm/tests/Event_Connection_Test/README:
          Changed to meet the latest code updates.

        * connectors/dds4ccm/tests/Event_Connection_Test/Receiver/Event_Connection_Test_Receiver.idl:
          Removed comments.

        * connectors/dds4ccm/tests/Event_Connection_Test/Receiver/Event_Connection_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Event_Connection_Test/Sender/Event_Connection_Test_Sender_exec.cpp:
          Logging debug messages (in stead of error messages).

        * connectors/dds4ccm/tests/State_Connection_Test/*:
          Added this test in order to test all the connections a state connector
          needs.
