@@ -3,6 +3,10 @@ Wed Dec  9 12:40:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
         * bin/ciao_tests.lst:
           Added Local_Facet test
 
+        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+          Resolved a bug whereby connection endpoints in the original plan
+          would be copied into two separate connections in a child plan.
+
 Wed Dec  9 12:37:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/Local_Facet:
